--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    <button id="run" class="btn">Run Dijkstra's</button><br>
+    <div class="buttons">
+        <button id="dij" class="btn">Run Dijkstra's</button>
+        <button id="bfs" class="btn">Run BFS</button>
+    </div>
     <button id="maze">Generate Maze</button>
     <div id="grid-container"></div>
     <script src="Scripts/script.js"></script>
-    <script src="Scripts/dijkstra.js"></script>
+    <!-- <script src="Scripts/graph.js"></script> -->
     <script src="Scripts/recursiveBacktring.js"></script>
+    <script src="Scripts/dijkstra.js"></script>
+    <script src="Scripts/bfs.js"></script>
 </body>
 </html>
