--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="buttons">
         <button id="dij" class="btn">Run Dijkstra's</button>
         <button id="bfs" class="btn">Run BFS</button>
+        <button id="dfs" class="btn">Run DFS</button>
     </div>
     <button id="maze">Generate Maze</button>
     <div id="grid-container"></div>
@@ -19,5 +20,6 @@
     <script src="Scripts/recursiveBacktring.js"></script>
     <script src="Scripts/dijkstra.js"></script>
     <script src="Scripts/bfs.js"></script>
+    <script src="Scripts/dfs.js"></script>
 </body>
 </html>
