Navbar and styling changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pathfinding Visualizer</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/icon.ico">
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
@@ -12,11 +13,10 @@
         <button id="dij" class="btn">Run Dijkstra's</button>
         <button id="bfs" class="btn">Run BFS</button>
         <button id="dfs" class="btn">Run DFS</button>
+        <button id="maze">Generate Maze</button>
     </div>
-    <button id="maze">Generate Maze</button>
     <div id="grid-container"></div>
     <script src="Scripts/script.js"></script>
-    <!-- <script src="Scripts/graph.js"></script> -->
     <script src="Scripts/recursiveBacktring.js"></script>
     <script src="Scripts/dijkstra.js"></script>
     <script src="Scripts/bfs.js"></script>
